--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7092,13 +7092,33 @@ label {
 
 .our-focused-para-list-dv ul li {
 	list-style: none;
-    /* margin-bottom: 15px; */
     position: relative;
     margin-right: 20px;
 	text-align: justify;
 }
 
 .our-focused-para-list-dv ul li:before {
+	position: absolute;
+	content: "\f336";
+	left: 0px;
+	top: 2px;
+	color: #00bdf3;
+	font-size: 15px;
+	margin-left: -20px;
+	font-family: "Font Awesome 5 pro";
+}
+.innerpage-para-list-dv ul {
+	list-style-type: none;
+}
+
+.innerpage-para-list-dv ul li {
+	list-style: none;
+    position: relative;
+    margin-right: 20px;
+	text-align: justify;
+}
+
+.innerpage-para-list-dv ul li:before {
 	position: absolute;
 	content: "\f336";
 	left: 0px;
